# CopyFileGUI

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/: copier.cpp  copyapp.cpp  guimanager.cpp  main.cpp
src/include/: copier.h  copyapp.h  gui.xrc  guimanager.h  main.h  resources.xrs
